erDiagram
    MASTER_UNIT_PRODI ||--o{ MASTER_UNIT_PRODI : parent_child

    USERS ||--o{ PENGAJUAN : mengajukan
    MASTER_UNIT_PRODI ||--o{ PENGAJUAN : terkait_unit_prodi
    MASTER_MITRA ||--o{ PENGAJUAN : terkait_mitra

    PENGAJUAN ||--o{ PENGAJUAN_FILE : punya_berkas
    PENGAJUAN ||--o{ PENGAJUAN_LOG : punya_log
    PENGAJUAN ||--o| DOKUMEN_KERJASAMA : disahkan_menjadi

    DOKUMEN_KERJASAMA ||--o{ DOKUMEN_FILE : punya_berkas
    DOKUMEN_KERJASAMA ||--o{ DOKUMEN_LOG : punya_log

    MASTER_UNIT_PRODI ||--o{ DOKUMEN_KERJASAMA : terkait_unit_prodi
    MASTER_MITRA ||--o{ DOKUMEN_KERJASAMA : terkait_mitra

    USERS ||--o{ PENGAJUAN_FILE : unggah
    USERS ||--o{ PENGAJUAN_LOG : catat
    USERS ||--o{ DOKUMEN_FILE : unggah
    USERS ||--o{ DOKUMEN_LOG : catat

    MASTER_UNIT_PRODI {
      bigint id PK
      bigint parent_id FK
      enum jenis_node
      varchar kode
      varchar nama
      boolean aktif
    }

    MASTER_MITRA {
      bigint id PK
      varchar nama_mitra
      varchar kategori_mitra
      varchar negara
      varchar email_mitra
      varchar telepon_mitra
      varchar nama_kontak_utama
    }

    MASTER_RUANG_LINGKUP {
      bigint id PK
      varchar nama_ruang_lingkup
      boolean aktif
    }

    PENGAJUAN {
      bigint id PK
      varchar nomor_pengajuan UK
      bigint user_pengusul_id FK
      bigint unit_prodi_id FK
      bigint mitra_id FK
      varchar judul_pengajuan
      enum jenis_dokumen
      enum status_pengajuan
      bigint ruang_lingkup_ids ARRAY
      date tanggal_mulai
      date tanggal_berakhir
    }

    PENGAJUAN_FILE {
      bigint id PK
      bigint pengajuan_id FK
      varchar nama_file
      varchar path_file
      bigint ukuran_file_bytes
    }

    PENGAJUAN_LOG {
      bigint id PK
      bigint pengajuan_id FK
      enum tipe_log
      enum status_lama
      enum status_baru
      text isi_log
      json payload_json
      timestamp dibuat_pada
    }

    DOKUMEN_KERJASAMA {
      bigint id PK
      varchar nomor_dokumen UK
      bigint sumber_pengajuan_id FK
      bigint unit_prodi_id FK
      bigint mitra_id FK
      enum jenis_dokumen
      bigint ruang_lingkup_ids ARRAY
      date tanggal_mulai
      date tanggal_berakhir
      enum status_siklus
      timestamp diarsipkan_pada
    }

    DOKUMEN_FILE {
      bigint id PK
      bigint dokumen_id FK
      varchar peran_berkas
      varchar nama_file
      varchar path_file
      bigint ukuran_file_bytes
    }

    DOKUMEN_LOG {
      bigint id PK
      bigint dokumen_id FK
      enum tipe_log
      text isi_log
      json payload_json
      timestamp dibuat_pada
    }
